# nanoserve-mini

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEX_BOOTSTRAP_CONFIG_TASK.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: sync-state.md
.codex/: config.toml
benchmarks/coding-agent-tasks/: README.md
benchmarks/coding-agent-tasks/02_python_cli_and_streaming_client/starter/: pyproject.toml
benchmarks/coding-agent-tasks/02_python_cli_and_streaming_client/starter/stream_probe/: __init__.py  cli.py  client.py  reporting.py
benchmarks/coding-agent-tasks/03_cpp_buffer_and_hotpath/hidden/: CMakeLists.txt  run.sh  test_token_buffer_hidden.cpp
benchmarks/coding-agent-tasks/03_cpp_buffer_and_hotpath/public/: CMakeLists.txt  run.sh  test_token_buffer_public.cpp
benchmarks/coding-agent-tasks/03_cpp_buffer_and_hotpath/starter/: CMakeLists.txt
benchmarks/coding-agent-tasks/03_cpp_buffer_and_hotpath/starter/benchmarks/: CMakeLists.txt  bench_append.cpp
benchmarks/coding-agent-tasks/03_cpp_buffer_and_hotpath/starter/src/: main.cpp  token_buffer.cpp  token_buffer.h
benchmarks/coding-agent-tasks/03_cpp_buffer_and_hotpath/starter/tests/public/: CMakeLists.txt
benchmarks/scripts/: __init__.py  _client.py  _schemas.py  _server_metrics.py  check_local.ps1  check_server_env.py  collect_metrics_snapshot.py  download_swe_bench_lite.py  measure_ttft_once.py  metrics_delta.py  request_once.py  run_bench_suite.py  run_sequential_benchmark.py  sample_gpu_metrics.py
benchmarks/scripts_tests/: test_client.py  test_collect_metrics_snapshot.py  test_measure_ttft_once.py  test_metrics.py  test_metrics_delta.py  test_request_once.py  test_run_bench_suite.py  test_run_sequential_benchmark.py  test_server_metrics.py
docs/: README.md  ROADMAP_v_1_0.md  agent-state.md  architecture.html  architecture.json  benchmark-methodology.md  company-ai-support-h200-plan.md  index.md  infrastructure_v_1_0.md  nvidia_self_paced_courses.md  paper-reading-guide.md  reading-list.md  server-first-session.md
docs/handoff-archive/: 2026-05.md
docs/learning/: paper-reading-guide.md  reading-list.md
docs/operations/: agent-state.md  benchmark-methodology.md  infrastructure.md  sys-521ge-tnrt.md
docs/papers-notes/: efficient-llm-serving-survey.md
docs/plans/: 2026-05-11-server-work-plan.md  2026-05-19-post-server-laptop-plan.md  2026-05-19-server-session-summary.md  2026-05-19-server-work-plan.md  2026-05-27-laptop-w1-writeup-update.md  2026-05-27-server-session.md  2026-06-03-server-session.md  2026-06-05-t5-dashboard-load.md  2026-06-09-w1-article-deepening.md  2026-06-10-bottleneck-followup-session.md  2026-06-10-server-session.md  2026-06-11-nvlink-boundary-session.md  codex-reviewer-smoke-test.md
docs/project/: company-ai-support-h200-plan.md  roadmap.md
docs/runbooks/: vllm-kimi_k2_6-dockercompose.yaml
docs/templates/: paper-note-lite.md  paper-note-template.md  sync-state-agent.md  tidy-docs-agent.md
docs/writeups/: w1-article.md  w1-multi-model-serving-baseline.md
infra/compose/: .env.example  README.md  docker-compose.kimi-k2.6.yml
results/raw/: first_ttft.json  server_env_snapshot.json
results/summaries/: 2026-06-11-kimi-tp8-profile.md  2026-06-11-nvlink-boundary-verdict.md  (+2 more)
scripts/: _client.py  _metrics.py  _schemas.py  _server_metrics.py  check_local.ps1  collect_metrics_snapshot.py  measure_ttft_once.py  request_once.py  run_coding_agent_task.py  run_sequential_benchmark.py  sample_gpu_metrics.py
tests/: test_client.py  test_collect_metrics_snapshot.py  test_measure_ttft_once.py  test_metrics.py  test_request_once.py  test_run_coding_agent_task.py  test_run_sequential_benchmark.py  test_sample_gpu_metrics.py  test_server_metrics.py
(+825 files in other folders)
