[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-probe"
version = "0.1.0"
description = "OpenAI-compatible streaming chat completion probe CLI."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
stream-probe = "stream_probe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["stream_probe"]
