cmake_minimum_required(VERSION 3.16)
project(token_buffer_task CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_library(token_buffer src/token_buffer.cpp)
target_include_directories(token_buffer PUBLIC src)
add_executable(token_buffer_demo src/main.cpp)
target_link_libraries(token_buffer_demo PRIVATE token_buffer)
option(BUILD_BENCH "build bench_append" OFF)
if(BUILD_BENCH)
  add_executable(bench_append benchmarks/bench_append.cpp)
  target_link_libraries(bench_append PRIVATE token_buffer)
endif()
